--- a/bzco/src/components/Header/Header.css
+++ b/bzco/src/components/Header/Header.css
@@ -1,35 +1,35 @@
-
-.header{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    background-color: rgb(219, 215, 215);
-    width: 100vw;
-    height: 10vh;
-    position: sticky;
-    top: 0;
-    
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(219, 215, 215);
+  width: 100vw;
+  height: 10vh;
+  position: sticky;
+  top: 0;
 }
-.name{
-    font-size: 3rem;
-    font-family: 'Tangerine', cursive;
+.nameContainer,
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.navs{
-    font-size: 1.7rem;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    font-family: 'Noto Serif Telugu', serif;
-
-
-    
-    
+.name {
+  font-size: 3rem;
+  font-family: "Tangerine", cursive;
 }
-.navs li{
-    padding: 10px;
-
+.schoonmaak {
+  font-size: 2.2rem;
+  font-family: "Tangerine", cursive;
 }
-.contact{
-    font-size: 1rem;
+.navs {
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: row;
+  font-family: "Noto Serif Telugu", serif;
 }
-
+.navs a {
+  color: black;
+  text-decoration: none;
+  padding: 5px;
+}
