--- a/bzco/src/components/Header/Header.css
+++ b/bzco/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgb(219, 215, 215);
+  background-color: rgb(94, 167, 235);
   width: 100vw;
   height: 10vh;
   position: sticky;
@@ -23,7 +23,7 @@
   font-family: "Tangerine", cursive;
 }
 .navs {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   display: flex;
   flex-direction: row;
   font-family: "Noto Serif Telugu", serif;
@@ -31,5 +31,11 @@
 .navs a {
   color: black;
   text-decoration: none;
-  padding: 5px;
+  letter-spacing: 0px;
+  padding: 12px;
+  border-radius: 10px;
+}
+.active {
+  background-color: rgba(44, 30, 233, 0.13);
+  font-weight: bold;
 }
