--- a/bzco/src/components/Header/Header.css
+++ b/bzco/src/components/Header/Header.css
@@ -1,27 +1,26 @@
 .header {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-around;
   background-color: rgb(94, 167, 235);
+
   width: 100vw;
-  height: 10vh;
+  height: 11vh;
   position: sticky;
   top: 0;
 }
-.nameContainer,
 .contact {
   display: flex;
+  width: 300px;
   flex-direction: column;
   align-items: center;
 }
-.name {
-  font-size: 2.8rem;
-  font-family: "Tangerine", cursive;
+.bzco_logo {
+  width: 320px;
+  display: flex;
+  mix-blend-mode: multiply;
 }
-.schoonmaak {
-  font-size: 2.3rem;
-  font-family: "Tangerine", cursive;
-}
+
 .navs {
   font-size: 1.5rem;
   display: flex;
