--- a/bzco/src/components/Header/Header.css
+++ b/bzco/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   background-color: rgb(94, 167, 235);
 
-  width: 100vw;
+  max-width: 100vw;
   height: 11vh;
   position: sticky;
   top: 0;
@@ -13,7 +13,10 @@
   display: flex;
   width: 300px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: "Noto Serif Telugu", serif;
 }
 .bzco_logo {
   width: 320px;
