--- a/bzco/src/components/Landing/Landing.css
+++ b/bzco/src/components/Landing/Landing.css
@@ -22,6 +22,9 @@
 .glassCleaning {
   float: right;
 }
+.mirrorCleaning {
+  margin-top: 21px;
+}
 .sna {
   display: flex;
   flex-direction: column;
@@ -34,7 +37,7 @@
 
 .slogan,
 .snaH1 {
-  color: rgb(94, 167, 235);
+  color: #1b61bf;
   font-family: "Mooli", sans-serif;
 }
 .sloganDescription,
