--- a/bzco/src/components/Header/Header.css
+++ b/bzco/src/components/Header/Header.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: rgb(94, 167, 235);
+  /* background-color: rgb(94, 167, 235); */
+  background-image: linear-gradient(rgb(88, 88, 235), rgb(20, 145, 227));
 
   max-width: 100vw;
-  height: 11vh;
+  height: 12vh;
   position: sticky;
   top: 0;
 }
@@ -19,7 +20,8 @@
   font-family: "Noto Serif Telugu", serif;
 }
 .bzco_logo {
-  width: 320px;
+  width: 18vw;
+  min-width: 240px;
   display: flex;
   mix-blend-mode: multiply;
 }
