--- a/bzco/src/components/Header/Header.css
+++ b/bzco/src/components/Header/Header.css
@@ -1,36 +1,28 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  /* background-color: rgb(94, 167, 235); */
   background-image: linear-gradient(rgb(88, 88, 235), rgb(20, 145, 227));
-
   max-width: 100vw;
-  height: 12vh;
+  height: 13vh;
   position: sticky;
   top: 0;
 }
-.contact {
-  display: flex;
-  width: 300px;
-  flex-direction: column;
-  align-items: flex-end;
-  font-size: 1.2rem;
-  font-weight: 600;
-  font-family: "Noto Serif Telugu", serif;
-}
+
 .bzco_logo {
   width: 18vw;
   min-width: 240px;
-  display: flex;
   mix-blend-mode: multiply;
 }
-
+.navContainer {
+  width: 35vw;
+  margin-left: 20vw;
+}
 .navs {
   font-size: 1.5rem;
   display: flex;
   flex-direction: row;
   font-family: "Noto Serif Telugu", serif;
+  width: 40vw;
 }
 .navs a {
   color: black;
@@ -42,4 +34,26 @@
 .active {
   background-color: rgba(44, 30, 233, 0.13);
   font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  /* Your CSS rules for small screens here */
+  .header {
+    height: 17vh;
+    flex-direction: column;
+  }
+
+  .bzco_logo {
+    width: 10vw;
+  }
+  .navContainer {
+    align-self: flex-start;
+    width: 100vw;
+    margin-left: 0;
+  }
+  .navs {
+    font-size: 1rem;
+    width: 100vw;
+    justify-content: center;
+  }
 }
