--- a/bzco/src/components/Footer/footer.css
+++ b/bzco/src/components/Footer/footer.css
@@ -25,3 +25,19 @@
   list-style-type: none;
   margin-top: 30px;
 }
+@media (max-width: 768px) {
+  .footer {
+    padding: 10px;
+    height: 45vh;
+  }
+  .footerH4 {
+    font-size: 1.2rem;
+    width: 90vw;
+  }
+  .footerContact {
+    margin-top: 0px;
+    font-size: 1.1rem;
+    justify-content: center;
+    text-align: center;
+  }
+}
