--- a/bzco/src/components/Contact/contact.css
+++ b/bzco/src/components/Contact/contact.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50vw;
+  width: 60vw;
   align-self: center;
 }
 .customerSupport {
@@ -18,4 +18,12 @@
   margin-bottom: 20px;
   text-align: left;
   text-align: center;
+}
+@media (max-width: 768px) {
+  .info {
+    width: 85vw;
+  }
+  .customerSupport {
+    width: 50vw;
+  }
 }
